# vm-rs

./: Cargo.toml  README.md
fixtures/: test.ini
src/: aws.rs  lib.rs  main.rs  ssh.rs  sync.rs
src/aws/: ec2.rs  sts.rs
src/cli/: mfa.rs  mod.rs  sync.rs  vm.rs
