[package]
name = "vm-rs"
description = "Cloud VM and storage utilities"
license = "MIT OR Apache-2.0"
keywords = ["cli", "vm"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
aws-config = "0.55.2"
aws-sdk-ec2 = "0.27.0"
aws-sdk-sts = "0.27.0"
aws-types = "0.55.2"
chrono = { version = "0.4.24", features = ["clock"] }
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
either = "1.8.1"
home = "0.5.5"
lazy_static = "1.4.0"
regex = "1.8.1"
rust-ini = "0.19.0"
serde = { version = "1.0.163", features = ["derive"] }
shlex = "1.1.0"
ssh2-config = "0.2.0"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["test-util", "macros", "rt-multi-thread", "process" ] }
